# blackc

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
black/include/: utils.h
black/src/: Makefile  Makefile.am  Makefile.in  image_render_set.c  utils.c
blacklua/src/: Makefile  Makefile.am  Makefile.in
