SUBDIRS = \
	black/src \
	blacklua/src

include_HEADERS = \
	black/include/astar.h \
	black/include/black.h \
	black/include/collide.h \
	black/include/event_queue.h \
	black/include/font.h \
	black/include/game_manager.h \
	black/include/game_object.h \
	black/include/game_state.h \
	black/include/game_state_interface.h \
	black/include/image_loader.h \
	black/include/image_render_set.h \
	black/include/list.h \
	black/include/message.h \
	black/include/message_handler_interface.h \
	black/include/queue.h \
	black/include/renderable_interface.h \
	black/include/sdl_font.h \
	black/include/sdl_graphics_context.h \
	black/include/sdl_sound.h \
	black/include/tree.h \
	black/include/types.h \
	black/include/updateable_interface.h \
	black/include/utils.h \
	blacklua/include/blacklua.h
